--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "陈于思"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "山东大学"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "chenyusii@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
